--- a/index.html
+++ b/index.html
@@ -1,252 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Be My Valentine 💖</title>
+  <meta charset="UTF-8" />
+  <title>Be My Valentine 💖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-:root{
-  --bg1:#ffb7b7;
-  --bg2:#ffd1dc;
-  --card1:#fff1f2;
-  --card2:#ffe4e6;
-  --text:#4a1c2f;
-  --yes:#ff4d6d;
-}
+  <style>
+    :root{
+      --bg1:#ffb7b7;
+      --bg2:#ffd1dc;
+      --card1:#fff1f2;
+      --card2:#ffe4e6;
+      --text:#4a1c2f;
+      --yes:#ff4d6d;
+    }
 
-body{
-  height:100vh;
-  margin:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-family:system-ui, Arial;
-  color:var(--text);
-  background:linear-gradient(135deg,var(--bg1),var(--bg2));
-  overflow:hidden;
-}
+    body{
+      height:100vh;
+      margin:0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      font-family:system-ui, Arial;
+      color:var(--text);
+      overflow:hidden;
+      background: linear-gradient(135deg, var(--bg1), var(--bg2));
+    }
 
-.card{
-  background:linear-gradient(135deg,var(--card1),var(--card2));
-  padding:30px;
-  border-radius:22px;
-  text-align:center;
-  box-shadow:0 12px 35px rgba(0,0,0,.18);
-  max-width:620px;
-  width:calc(100% - 40px);
-  cursor:pointer;
-  position:relative;
-}
+    .card{
+      background: linear-gradient(135deg, var(--card1), var(--card2));
+      padding: 30px 35px;
+      border-radius: 22px;
+      text-align: center;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.18);
+      max-width: 640px;
+      width: calc(100% - 40px);
+      cursor: pointer;
+      user-select: none;
+      position: relative;
+      z-index: 2;
+    }
 
-.fake-img{
-  width:140px;
-  height:140px;
-  margin:0 auto 14px;
-  border-radius:16px;
-  display:grid;
-  place-items:center;
-  font-size:46px;
-  background:rgba(255,255,255,.6);
-}
+    .ponyo-img{
+      width: 140px;
+      border-radius: 16px;
+      margin-bottom: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      display:block;
+      margin-left:auto;
+      margin-right:auto;
+      pointer-events:none;
+    }
 
-p{
-  font-size:18px;
-  line-height:1.6;
-  min-height:110px;
-}
+    p{
+      font-size:18px;
+      line-height:1.6;
+      min-height: 120px;
+    }
 
-.buttons{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  gap:18px;
-  margin-top:20px;
-  position:relative;
-  height:90px;
-}
+    .buttons{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:20px;
+      margin-top:20px;
+      position:relative;
+      height: 90px;
+    }
 
-button{
-  padding:12px 22px;
-  font-size:18px;
-  border-radius:14px;
-  border:none;
-  cursor:pointer;
-  transition:transform .15s ease, filter .2s ease;
-}
+    button{
+      padding: 12px 22px;
+      font-size: 18px;
+      border-radius: 14px;
+      border:none;
+      cursor:pointer;
+      transition: transform .15s ease, filter .25s ease;
+      position: relative;
+      touch-action: manipulation;
+    }
 
-#yes{
-  background:var(--yes);
-  color:white;
-  box-shadow:0 10px 25px rgba(255,77,109,.35);
-}
+    button:active{ transform: scale(.95); }
 
-#no{
-  background:#d3d3d3;
-  color:#333;
-}
+    #yes{
+      background: var(--yes);
+      color:white;
+      box-shadow: 0 10px 25px rgba(255,77,109,.35);
+    }
 
-/* Confetti */
-.confetti-layer{
-  position:fixed;
-  inset:0;
-  pointer-events:none;
-  z-index:9999;
-}
-.confetti{
-  position:absolute;
-  top:-10px;
-  width:10px;
-  height:14px;
-  border-radius:2px;
-  animation:fall linear forwards;
-}
-@keyframes fall{
-  to{transform:translateY(110vh) rotate(720deg);}
-}
+    #no{
+      background:#d3d3d3;
+      color:#333;
+    }
 
-/* Countdown */
-.countdown{
-  position:absolute;
-  inset:0;
-  background:rgba(255,255,255,.6);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:54px;
-  font-weight:800;
-  border-radius:22px;
-}
-</style>
+    .confetti-layer{
+      position: fixed;
+      inset: 0;
+      pointer-events:none;
+      overflow:hidden;
+      z-index: 9999;
+    }
+
+    .confetti{
+      position:absolute;
+      top:-10px;
+      width:10px;
+      height:14px;
+      border-radius:2px;
+      animation: fall linear forwards;
+    }
+
+    @keyframes fall{
+      to{ transform: translateY(110vh) rotate(720deg); }
+    }
+
+    .countdown{
+      position:absolute;
+      inset: 0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background: rgba(255,255,255,.55);
+      border-radius: 22px;
+      font-size: 54px;
+      font-weight: 800;
+      z-index: 5;
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="card" id="card">
-  <div class="fake-img">🐟💖</div>
+  <div class="card" id="messageCard">
+    <img src="ponyo.jpg" alt="Ponyo" class="ponyo-img" />
 
-  <h1>Hey my Ponyo 💖</h1>
+    <h1>Hey my Ponyo 💖</h1>
 
-  <p id="message"></p>
+    <p id="typewriter"></p>
 
-  <h2>Will you be my Valentine? 💘</h2>
+    <h2>Will you be my Valentine? 💘</h2>
 
-  <div class="buttons" id="btnBox">
-    <button id="yes">YES 💕</button>
-    <button id="no">NO 😅</button>
-  </div>
-</div>
-
-<script>
-const messageLines = [
-  "Thank you for leaving the sea and coming into my world.",
-  "You turned ordinary days into something magical.",
-  "Every smile of yours feels like sunshine after rain.",
-  "And somehow, everything feels better when you’re around."
-];
-
-const msgEl = document.getElementById("message");
-const card = document.getElementById("card");
-const yesBtn = document.getElementById("yes");
-const noBtn = document.getElementById("no");
-const btnBox = document.getElementById("btnBox");
-
-let line = 0, char = 0;
-function typeWriter(){
-  if(line >= messageLines.length) return;
-  if(char < messageLines[line].length){
-    msgEl.innerHTML += messageLines[line][char++];
-    setTimeout(typeWriter, 22);
-  } else {
-    msgEl.innerHTML += "<br>";
-    line++; char = 0;
-    setTimeout(typeWriter, 420);
-  }
-}
-typeWriter();
-
-/* Confetti */
-function partyBlast(pieces=90){
-  const layer = document.createElement("div");
-  layer.className="confetti-layer";
-  document.body.appendChild(layer);
-
-  const colors=["#ff4d6d","#ffd166","#06d6a0","#4dabf7","#b197fc"];
-  for(let i=0;i<pieces;i++){
-    const c=document.createElement("div");
-    c.className="confetti";
-    c.style.left=Math.random()*100+"vw";
-    c.style.background=colors[Math.floor(Math.random()*colors.length)];
-    c.style.animationDuration=900+Math.random()*900+"ms";
-    layer.appendChild(c);
-  }
-  setTimeout(()=>layer.remove(),1600);
-}
-
-/* Card click → confetti (NOT from buttons) */
-card.addEventListener("click", (e)=>{
-  if(e.target.closest("button")) return;
-  partyBlast(90);
-});
-
-/* NO button escape (NO CONFETTI EVER) */
-function moveNo(){
-  const maxX = btnBox.clientWidth - noBtn.offsetWidth;
-  const maxY = btnBox.clientHeight - noBtn.offsetHeight;
-  noBtn.style.position="absolute";
-  noBtn.style.left=Math.random()*maxX+"px";
-  noBtn.style.top=Math.random()*maxY+"px";
-}
-
-["pointerdown","mouseover","touchstart","click"].forEach(evt=>{
-  noBtn.addEventListener(evt,(e)=>{
-    e.preventDefault();
-    e.stopPropagation();
-    e.stopImmediatePropagation();
-    moveNo();
-  },{passive:false});
-});
-
-/* YES click */
-yesBtn.addEventListener("click",(e)=>{
-  e.stopPropagation();
-
-  const overlay=document.createElement("div");
-  overlay.className="countdown";
-  overlay.textContent="3";
-  card.appendChild(overlay);
-
-  let n=3;
-  const t=setInterval(()=>{
-    n--;
-    overlay.textContent=n>0?n:"💖";
-    if(n<=0){
-      clearInterval(t);
-      showFinal();
-    }
-  },700);
-});
-
-function showFinal(){
-  document.body.innerHTML=`
-  <div style="height:100vh;display:flex;justify-content:center;align-items:center;background:linear-gradient(135deg,#ffb7b7,#ffd1dc);font-family:system-ui;">
-    <div style="background:linear-gradient(135deg,#fff1f2,#ffe4e6);padding:36px;border-radius:22px;box-shadow:0 12px 35px rgba(0,0,0,.18);text-align:center;">
-      <h1>💖 Big Congratulations 💖</h1>
-      <p style="font-size:20px;">
-        You are officially the Valentine of<br>
-        <strong>Sourabh Sharma (Sosuke)</strong> 💕
-      </p>
-      <p style="font-size:20px;">
-        I choose you today.<br>
-        I’ll choose you tomorrow.<br>
-        And I’ll choose you — always.
-      </p>
-      <p style="font-size:22px;">💘 Happy Valentine’s Day 💘</p>
+    <div class="buttons" id="btnContainer">
+      <button id="yes">YES 💕</button>
+      <button id="no">NO 😅</button>
     </div>
-  </div>`;
-  partyBlast(140);
-}
-</script>
+  </div>
+
+  <script>
+    const messageLines = [
+      "Thank you for leaving the sea and coming into my world.",
+      "You turned ordinary days into something magical.",
+      "Every smile of yours feels like sunshine after rain.",
+      "And somehow, everything feels better when you’re around."
+    ];
+
+    const typewriterEl = document.getElementById("typewriter");
+    const messageCard = document.getElementById("messageCard");
+    const yesBtn = document.getElementById("yes");
+    const noBtn = document.getElementById("no");
+    const container = document.getElementById("btnContainer");
+
+    let line = 0, char = 0;
+
+    function typeWriter(){
+      if(line >= messageLines.length) return;
+
+      if(char < messageLines[line].length){
+        typewriterEl.innerHTML += messageLines[line][char++];
+        setTimeout(typeWriter, 22);
+      } else {
+        typewriterEl.innerHTML += "<br>";
+        line++; char = 0;
+        setTimeout(typeWriter, 420);
+      }
+    }
+
+    typeWriter();
+
+    function partyBlast(pieces=90){
+      const layer = document.createElement("div");
+      layer.className="confetti-layer";
+      document.body.appendChild(layer);
+
+      const colors=["#ff4d6d","#ffd166","#06d6a0","#4dabf7","#b197fc"];
+
+      for(let i=0;i<pieces;i++){
+        const c=document.createElement("div");
+        c.className="confetti";
+        c.style.left=Math.random()*100+"vw";
+        c.style.background=colors[Math.floor(Math.random()*colors.length)];
+        c.style.animationDuration=900+Math.random()*900+"ms";
+        layer.appendChild(c);
+      }
+
+      setTimeout(()=>layer.remove(),1600);
+    }
+
+    // ✅ CONFETTI ONLY when clicking card itself (not buttons)
+    messageCard.addEventListener("click", (e)=>{
+      if(e.target.closest("button")) return;
+      partyBlast(90);
+    });
+
+    // ✅ NO runs away (NO CONFETTI EVER)
+    function moveNoButton() {
+      const maxX = container.clientWidth - noBtn.offsetWidth;
+      const maxY = container.clientHeight - noBtn.offsetHeight;
+
+      noBtn.style.position = "absolute";
+      noBtn.style.left = Math.random() * maxX + "px";
+      noBtn.style.top  = Math.random() * maxY + "px";
+    }
+
+    ["pointerdown","mouseover","touchstart","click"].forEach(evt=>{
+      noBtn.addEventListener(evt,(e)=>{
+        e.preventDefault();
+        e.stopPropagation();
+        e.stopImmediatePropagation();
+        moveNoButton();
+      },{passive:false});
+    });
+
+    // YES click
+    yesBtn.addEventListener("click",(e)=>{
+      e.stopPropagation();
+
+      const overlay=document.createElement("div");
+      overlay.className="countdown";
+      overlay.textContent="3";
+      messageCard.appendChild(overlay);
+
+      let n=3;
+      const t=setInterval(()=>{
+        n--;
+        overlay.textContent=n>0?n:"💖";
+        if(n<=0){
+          clearInterval(t);
+          showFinal();
+        }
+      },700);
+    });
+
+    function showFinal(){
+      document.body.innerHTML=`
+        <div style="height:100vh;display:flex;justify-content:center;align-items:center;background:linear-gradient(135deg,#ffb7b7,#ffd1dc);font-family:system-ui;">
+          <div style="background:linear-gradient(135deg,#fff1f2,#ffe4e6);padding:36px;border-radius:22px;box-shadow:0 12px 35px rgba(0,0,0,.18);text-align:center;">
+            <h1>💖 Big Congratulations 💖</h1>
+            <p style="font-size:20px;">
+              You are officially the Valentine of<br>
+              <strong>Sourabh Sharma (Sosuke)</strong> 💕
+            </p>
+            <p style="font-size:20px;">
+              I choose you today.<br>
+              I’ll choose you tomorrow.<br>
+              And I’ll choose you — always.
+            </p>
+            <p style="font-size:22px;">💘 Happy Valentine’s Day 💘</p>
+          </div>
+        </div>
+      `;
+      partyBlast(140);
+    }
+  </script>
 
 </body>
 </html>
