--- a/index.html
+++ b/index.html
@@ -1,130 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Be My Valentine 💖</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <title>Be My Valentine 💖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-:root{
-  --bg1:#ffb7b7;
-  --bg2:#ffd1dc;
-  --card1:#fff1f2;
-  --card2:#ffe4e6;
-  --text:#4a1c2f;
-  --yes:#ff4d6d;
-}
+  <style>
+    :root{
+      --bg1:#ffb7b7;
+      --bg2:#ffd1dc;
+      --card1:#fff1f2;
+      --card2:#ffe4e6;
+      --text:#4a1c2f;
+      --yes:#ff4d6d;
+    }
 
-/* ---------------- EXISTING STYLES ---------------- */
-body{
-  height:100vh;
-  margin:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-family:system-ui, Arial;
-  color:var(--text);
-  overflow:hidden;
-  background:
-    radial-gradient(circle at 20% 30%, rgba(255,255,255,.35) 0 1px, transparent 2px),
-    radial-gradient(circle at 70% 20%, rgba(255,255,255,.28) 0 1px, transparent 2px),
-    radial-gradient(circle at 40% 75%, rgba(255,255,255,.22) 0 1px, transparent 2px),
-    radial-gradient(circle at 85% 65%, rgba(255,255,255,.25) 0 1px, transparent 2px),
-    radial-gradient(circle at 10% 80%, rgba(255,255,255,.2) 0 1px, transparent 2px),
-    linear-gradient(135deg, var(--bg1), var(--bg2));
-  background-size:220px 220px,260px 260px,240px 240px,300px 300px,280px 280px,cover;
-  animation:twinkle 3.5s ease-in-out infinite alternate;
-}
-@keyframes twinkle{from{filter:brightness(1);}to{filter:brightness(1.04);}}
+    body{
+      height:100vh;
+      margin:0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      font-family:system-ui, Arial;
+      color:var(--text);
+      overflow:hidden;
+      background:
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,.35) 0 1px, transparent 2px),
+        radial-gradient(circle at 70% 20%, rgba(255,255,255,.28) 0 1px, transparent 2px),
+        radial-gradient(circle at 40% 75%, rgba(255,255,255,.22) 0 1px, transparent 2px),
+        radial-gradient(circle at 85% 65%, rgba(255,255,255,.25) 0 1px, transparent 2px),
+        radial-gradient(circle at 10% 80%, rgba(255,255,255,.2) 0 1px, transparent 2px),
+        linear-gradient(135deg, var(--bg1), var(--bg2));
+      background-size:220px 220px,260px 260px,240px 240px,300px 300px,280px 280px,cover;
+      animation:twinkle 3.5s ease-in-out infinite alternate;
+    }
 
-/* --- (Your entire previous CSS remains unchanged here) --- */
+    @keyframes twinkle{
+      from{ filter: brightness(1); }
+      to{ filter: brightness(1.04); }
+    }
 
-/* ---------------------------------------------------------- */
-/* 💔 FAKE CRASH SCREEN STYLES */
-.crash{
-  position:fixed;
-  inset:0;
-  z-index:20000;
-  background:rgba(15,6,10,0.92);
-  color:#fff;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  padding:28px;
-  text-align:center;
-}
+    .card{
+      background: linear-gradient(135deg, var(--card1), var(--card2));
+      padding: 30px 35px;
+      border-radius: 22px;
+      text-align: center;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.18);
+      max-width: 640px;
+      width: calc(100% - 40px);
+      cursor: pointer;
+      user-select: none;
+      position: relative;
+      z-index: 2;
+    }
 
-.crash-box{
-  max-width:720px;
-  width:min(720px,calc(100% - 30px));
-  background:rgba(255,255,255,0.08);
-  border:1px solid rgba(255,255,255,0.18);
-  border-radius:20px;
-  padding:26px 22px;
-  box-shadow:0 20px 60px rgba(0,0,0,0.45);
-  backdrop-filter:blur(10px);
-}
+    .ponyo-img{
+      width: 140px;
+      border-radius: 16px;
+      margin-bottom: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      display:block;
+      margin-left:auto;
+      margin-right:auto;
+      pointer-events:none;
+    }
 
-.crash-title{
-  font-size:30px;
-  font-weight:900;
-  margin-bottom:10px;
-}
+    h1,h2{ pointer-events:none; }
+    h2{ margin-top:25px; }
 
-.crash-sub{
-  font-size:16px;
-  opacity:0.9;
-  margin-bottom:16px;
-  line-height:1.6;
-}
+    p{
+      font-size:18px;
+      line-height:1.6;
+      pointer-events:none;
+      min-height: 120px;
+    }
 
-.crash-code{
-  font-family:ui-monospace,monospace;
-  font-size:14px;
-  background:rgba(0,0,0,0.25);
-  padding:12px;
-  border-radius:14px;
-  margin:14px 0 18px;
-}
+    .hint{
+      font-size: 13px;
+      opacity: .75;
+      margin-top: 10px;
+      pointer-events:none;
+    }
 
-.crash-actions{
-  display:flex;
-  gap:12px;
-  justify-content:center;
-  flex-wrap:wrap;
-}
+    .buttons{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:20px;
+      margin-top:20px;
+      position:relative;
+      height: 90px;
+    }
 
-.crash-actions button{
-  border:none;
-  border-radius:14px;
-  padding:12px 18px;
-  font-size:16px;
-  cursor:pointer;
-}
+    button{
+      padding: 12px 22px;
+      font-size: 18px;
+      border-radius: 14px;
+      border:none;
+      cursor:pointer;
+      transition: transform .15s ease, box-shadow .25s ease, filter .25s ease;
+      position: relative;
+      touch-action: manipulation;
+    }
 
-.crash-accept{
-  background:var(--yes);
-  color:#fff;
-}
+    button:active{ transform: scale(.95); }
 
-.crash-try{
-  background:rgba(255,255,255,0.85);
-  color:#2b0e1b;
-}
-</style>
+    #yes{
+      background: var(--yes);
+      color:white;
+      z-index:3;
+      box-shadow: 0 10px 25px rgba(255,77,109,.35);
+    }
+
+    #no{
+      background:#d3d3d3;
+      color:#333;
+      z-index:3;
+    }
+
+    /* 💔 Crash Screen */
+    .crash{
+      position: fixed;
+      inset: 0;
+      z-index: 20000;
+      background: rgba(15, 6, 10, 0.92);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 28px;
+      text-align: center;
+    }
+
+    .crash-box{
+      max-width: 720px;
+      background: rgba(255,255,255,0.08);
+      border-radius: 20px;
+      padding: 26px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.45);
+    }
+
+    .crash-title{
+      font-size: 30px;
+      font-weight: 900;
+      margin-bottom: 10px;
+    }
+
+    .crash-actions{
+      display:flex;
+      gap:12px;
+      justify-content:center;
+      margin-top:20px;
+      flex-wrap:wrap;
+    }
+
+    .crash-accept{
+      background: var(--yes);
+      color:#fff;
+    }
+
+    .crash-try{
+      background:#fff;
+      color:#000;
+    }
+
+  </style>
 </head>
 
 <body>
 
-<!-- Your original HTML body remains unchanged -->
+<div class="card" id="messageCard">
+  <img src="ponyo.jpg" class="ponyo-img">
+  <h1 id="titleLine">Hey my Ponyo 💖</h1>
+  <p id="typewriter"></p>
+  <div class="hint">(Tap the message for a surprise ✨)</div>
+  <h2>Will you be my Valentine? 💘</h2>
+  <div class="buttons">
+    <button id="yes">YES 💕</button>
+    <button id="no">NO 😅</button>
+  </div>
+</div>
 
 <script>
 
-/* --------------- KEEP YOUR ORIGINAL JS ABOVE THIS --------------- */
+const yesBtn = document.getElementById("yes");
+const noBtn = document.getElementById("no");
 
-/* 💔 FAKE CRASH FUNCTION */
-function showCrashScreen() {
-  if (document.getElementById("crashOverlay")) return;
+function showCrashScreen(){
+  if(document.getElementById("crashOverlay")) return;
 
   const overlay = document.createElement("div");
   overlay.className = "crash";
@@ -133,15 +196,7 @@ function showCrashScreen() {
   overlay.innerHTML = `
     <div class="crash-box">
       <div class="crash-title">💔 ERROR: You cannot reject true love.</div>
-      <div class="crash-sub">
-        System detected a heart-connection that cannot be terminated.<br>
-        Please choose a valid option 😌💖
-      </div>
-      <div class="crash-code">
-        VALENTINE_EXCEPTION: LOVE_TOO_STRONG<br>
-        at HeartModule.commitForever() 💘<br>
-        at DestinyEngine.overrideDecision(YES) ✨
-      </div>
+      <p>System detected an unbreakable heart connection 💘</p>
       <div class="crash-actions">
         <button class="crash-accept" id="crashYes">Okay fine… YES 💕</button>
         <button class="crash-try" id="crashTry">Retry NO 😅</button>
@@ -151,17 +206,16 @@ function showCrashScreen() {
 
   document.body.appendChild(overlay);
 
-  document.getElementById("crashYes").addEventListener("click", () => {
+  document.getElementById("crashYes").onclick = () => {
     overlay.remove();
     yesBtn.click();
-  });
+  };
 
-  document.getElementById("crashTry").addEventListener("click", () => {
+  document.getElementById("crashTry").onclick = () => {
     alert("NO is currently unavailable 😌💖");
-  });
+  };
 }
 
-/* 🔥 OVERRIDE NO CLICK */
 noBtn.addEventListener("click", function(e){
   e.preventDefault();
   e.stopPropagation();
